Fix horizontal scrollbar in 1920x1080 resolution

--- a/scss/_normalize.scss
+++ b/scss/_normalize.scss
@@ -5,5 +5,7 @@
 body {
     font-size: 10px;
     width: 100vw;
+    max-width: 100%;
     transition: .5s ease-in-out;
+    overflow-x: hidden;
 }
